--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.jenetics</groupId>
+            <artifactId>jenetics</artifactId>
+            <version>4.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
